Add final result reduction
